Add exclude_index option for tree visualization.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -442,7 +442,8 @@
    "source": [
     "#| export\n",
     "def add_project_structure_section(index_path: Path = None,      # Path to index.ipynb\n",
-    "                                 marker: str = \"## Project Structure\"  # Section marker\n",
+    "                                 marker: str = \"## Project Structure\",  # Section marker\n",
+    "                                 exclude_index: bool = True     # Exclude index.ipynb from tree\n",
     "                                 ) -> str:                       # Generated structure content\n",
     "    \"Generate project structure tree content for index.ipynb\"\n",
     "    if index_path is None:\n",
@@ -452,7 +453,7 @@
     "        path = index_path.parent\n",
     "    \n",
     "    # Generate tree with descriptions\n",
-    "    tree_content = generate_tree_with_descriptions(path)\n",
+    "    tree_content = generate_tree_with_descriptions(path, exclude_index=exclude_index)\n",
     "    \n",
     "    # Get summary statistics\n",
     "    summary = get_tree_summary(path)\n",
