--- a/nbs/06_cli.ipynb
+++ b/nbs/06_cli.ipynb
@@ -66,19 +66,20 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def tree_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def tree_cmd(args):                                     # Command line arguments\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
     "    \n",
+    "    # Determine exclude_index flag (default True, but --include-index overrides)\n",
+    "    exclude_index = not getattr(args, 'include_index', False)\n",
+    "    \n",
     "    if args.basic:\n",
     "        # Basic tree without descriptions\n",
-    "        print(generate_tree(path, show_notebooks_only=args.notebooks_only))\n",
+    "        print(generate_tree(path, show_notebooks_only=args.notebooks_only, exclude_index=exclude_index))\n",
     "    else:\n",
     "        # Tree with descriptions\n",
-    "        print(generate_tree_with_descriptions(path))\n",
+    "        print(generate_tree_with_descriptions(path, exclude_index=exclude_index))\n",
     "    \n",
     "    # Show summary if requested\n",
     "    if args.summary:\n",
@@ -411,8 +412,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def main(\n",
-    "): # TODO: Add type hint\n",
+    "def main():\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "    parser = argparse.ArgumentParser(\n",
     "        prog='nbdev-overview',\n",
@@ -428,6 +428,7 @@
     "    tree_parser.add_argument('--notebooks-only', action='store_true', help='Show only notebooks, not directories')\n",
     "    tree_parser.add_argument('--summary', action='store_true', help='Include summary statistics')\n",
     "    tree_parser.add_argument('--subdir', help='Generate tree for specific subdirectory')\n",
+    "    tree_parser.add_argument('--include-index', action='store_true', help='Include index.ipynb in tree (excluded by default)')\n",
     "    tree_parser.set_defaults(func=tree_cmd)\n",
     "    \n",
     "    # API command\n",
