--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -187,8 +187,7 @@
     "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
     "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
     "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
-    "├── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
-    "└── index.ipynb              # Generate comprehensive overviews, API references, and project structure visualizations for nbdev projects to enhance developer and AI assistant understanding.\n",
+    "└── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
     "```\n",
     "\n",
     "Total: 8 notebooks"
@@ -213,18 +212,18 @@
     "    parsers --> core\n",
     "    parsers --> tree\n",
     "    tree --> core\n",
-    "    api_docs --> parsers\n",
     "    api_docs --> core\n",
-    "    api_docs --> tree\n",
+    "    api_docs --> parsers\n",
     "    api_docs --> dependencies\n",
+    "    api_docs --> tree\n",
     "    dependencies --> core\n",
     "    dependencies --> parsers\n",
-    "    generators --> core\n",
     "    generators --> tree\n",
+    "    generators --> core\n",
     "    cli --> tree\n",
-    "    cli --> dependencies\n",
     "    cli --> api_docs\n",
     "    cli --> parsers\n",
+    "    cli --> dependencies\n",
     "\n",
     "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
     "```\n",
@@ -431,7 +430,8 @@
     "                       is_last: bool = True,                # Is this the last item in parent\n",
     "                       show_notebooks_only: bool = False,   # Only show notebooks, not directories\n",
     "                       max_depth: Optional[int] = None,     # Maximum depth to traverse\n",
-    "                       current_depth: int = 0               # Current depth in traversal\n",
+    "                       current_depth: int = 0,              # Current depth in traversal\n",
+    "                       exclude_index: bool = True           # Exclude index.ipynb from tree\n",
     "                       ) -> List[str]:                      # Lines of tree output\n",
     "    \"Generate tree visualization lines for a directory\"\n",
     "```\n",
@@ -439,7 +439,8 @@
     "```python\n",
     "def generate_tree(path: Path = None,                    # Directory to visualize (defaults to nbs_path)\n",
     "                 show_notebooks_only: bool = False,     # Only show notebooks, not directories\n",
-    "                 max_depth: Optional[int] = None        # Maximum depth to traverse\n",
+    "                 max_depth: Optional[int] = None,       # Maximum depth to traverse\n",
+    "                 exclude_index: bool = True             # Exclude index.ipynb from tree\n",
     "                 ) -> str:                              # Tree visualization as string\n",
     "    \"Generate a tree visualization for a directory\"\n",
     "```\n",
@@ -453,7 +454,8 @@
     "```python\n",
     "def generate_tree_with_descriptions(path: Path = None,              # Directory to visualize\n",
     "                                   show_counts: bool = True,        # Show notebook counts for directories\n",
-    "                                   max_depth: Optional[int] = None  # Maximum depth to traverse\n",
+    "                                   max_depth: Optional[int] = None, # Maximum depth to traverse\n",
+    "                                   exclude_index: bool = True       # Exclude index.ipynb from tree\n",
     "                                   ) -> str:                        # Tree with descriptions\n",
     "    \"Generate tree visualization with descriptions from notebooks\"\n",
     "```\n",
@@ -463,7 +465,8 @@
     "                               prefix: str = \"\",                    # Line prefix\n",
     "                               show_counts: bool = True,            # Show notebook counts\n",
     "                               max_depth: Optional[int] = None,     # Maximum depth\n",
-    "                               current_depth: int = 0               # Current depth\n",
+    "                               current_depth: int = 0,              # Current depth\n",
+    "                               exclude_index: bool = True           # Exclude index.ipynb from tree\n",
     "                               ) -> List[str]:                      # Tree lines\n",
     "    \"Generate tree lines for nested directory structure\"\n",
     "```\n",
@@ -544,7 +547,8 @@
     "\n",
     "```python\n",
     "def add_project_structure_section(index_path: Path = None,      # Path to index.ipynb\n",
-    "                                 marker: str = \"## Project Structure\"  # Section marker\n",
+    "                                 marker: str = \"## Project Structure\",  # Section marker\n",
+    "                                 exclude_index: bool = True     # Exclude index.ipynb from tree\n",
     "                                 ) -> str:                       # Generated structure content\n",
     "    \"Generate project structure tree content for index.ipynb\"\n",
     "```\n",
@@ -705,9 +709,15 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def tree_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def tree_cmd(args):                                     # Command line arguments\n",
+    "    \"Generate tree visualization for nbdev project\"\n",
+    "    # Get project path\n",
+    "    path = Path(args.path) if args.path else None\n",
+    "    \n",
+    "    # Determine exclude_index flag (default True, but --include-index overrides)\n",
+    "    exclude_index = not getattr(args, 'include_index', False)\n",
+    "    \n",
+    "    if args.basic\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "```\n",
     "\n",
@@ -747,8 +757,7 @@
     "```\n",
     "\n",
     "```python\n",
-    "def main(\n",
-    "): # TODO: Add type hint\n",
+    "def main()\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "```\n"
    ]
