--- a/nbs/02_tree.ipynb
+++ b/nbs/02_tree.ipynb
@@ -70,53 +70,49 @@
     "                       is_last: bool = True,                # Is this the last item in parent\n",
     "                       show_notebooks_only: bool = False,   # Only show notebooks, not directories\n",
     "                       max_depth: Optional[int] = None,     # Maximum depth to traverse\n",
-    "                       current_depth: int = 0               # Current depth in traversal\n",
+    "                       current_depth: int = 0,              # Current depth in traversal\n",
+    "                       exclude_index: bool = True           # Exclude index.ipynb from tree\n",
     "                       ) -> List[str]:                      # Lines of tree output\n",
     "    \"Generate tree visualization lines for a directory\"\n",
     "    lines = []\n",
     "    \n",
-    "    # Skip if we've reached max depth\n",
-    "    if max_depth is not None and current_depth > max_depth:\n",
+    "    # Check depth limit\n",
+    "    if max_depth is not None and current_depth >= max_depth:\n",
     "        return lines\n",
     "    \n",
-    "    # Get items to display\n",
-    "    items = []\n",
-    "    \n",
-    "    if not show_notebooks_only:\n",
-    "        # Get subdirectories\n",
-    "        subdirs = get_subdirectories(path, recursive=False)\n",
-    "        items.extend([(d, True) for d in subdirs])\n",
-    "    \n",
-    "    # Get notebooks in this directory\n",
+    "    # Get items to process\n",
+    "    subdirs = sorted([d for d in path.iterdir() if d.is_dir()])\n",
     "    notebooks = get_notebook_files(path, recursive=False)\n",
-    "    items.extend([(n, False) for n in notebooks])\n",
     "    \n",
-    "    # Sort items by name\n",
-    "    items.sort(key=lambda x: x[0].name.lower())\n",
+    "    # Filter out index.ipynb if exclude_index is True\n",
+    "    if exclude_index:\n",
+    "        notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "    \n",
+    "    # Combine items based on show_notebooks_only\n",
+    "    if show_notebooks_only:\n",
+    "        items = [(nb, 'file') for nb in notebooks]\n",
+    "    else:\n",
+    "        items = [(d, 'dir') for d in subdirs] + [(nb, 'file') for nb in notebooks]\n",
     "    \n",
     "    # Generate lines for each item\n",
-    "    for i, (item, is_dir) in enumerate(items):\n",
+    "    for i, (item, item_type) in enumerate(items):\n",
     "        is_last_item = (i == len(items) - 1)\n",
+    "        connector = \"└── \" if is_last_item else \"├── \"\n",
     "        \n",
-    "        # Determine the box drawing character\n",
-    "        if is_last_item:\n",
-    "            connector = \"└── \"\n",
-    "            extension = \"    \"\n",
-    "        else:\n",
-    "            connector = \"├── \"\n",
-    "            extension = \"│   \"\n",
-    "        \n",
-    "        # Add the item name\n",
-    "        lines.append(f\"{prefix}{connector}{item.name}\")\n",
-    "        \n",
-    "        # Recursively process directories\n",
-    "        if is_dir and not show_notebooks_only:\n",
-    "            child_prefix = prefix + extension\n",
+    "        if item_type == 'dir':\n",
+    "            # Directory line\n",
+    "            lines.append(f\"{prefix}{connector}{item.name}/\")\n",
+    "            \n",
+    "            # Recursive call for subdirectory\n",
+    "            next_prefix = prefix + (\"    \" if is_last_item else \"│   \")\n",
     "            child_lines = generate_tree_lines(\n",
-    "                item, child_prefix, is_last_item, \n",
-    "                show_notebooks_only, max_depth, current_depth + 1\n",
+    "                item, next_prefix, is_last_item, show_notebooks_only, \n",
+    "                max_depth, current_depth + 1, exclude_index\n",
     "            )\n",
     "            lines.extend(child_lines)\n",
+    "        else:\n",
+    "            # Notebook file line\n",
+    "            lines.append(f\"{prefix}{connector}{item.name}\")\n",
     "    \n",
     "    return lines"
    ]
@@ -131,7 +127,8 @@
     "#| export\n",
     "def generate_tree(path: Path = None,                    # Directory to visualize (defaults to nbs_path)\n",
     "                 show_notebooks_only: bool = False,     # Only show notebooks, not directories\n",
-    "                 max_depth: Optional[int] = None        # Maximum depth to traverse\n",
+    "                 max_depth: Optional[int] = None,       # Maximum depth to traverse\n",
+    "                 exclude_index: bool = True             # Exclude index.ipynb from tree\n",
     "                 ) -> str:                              # Tree visualization as string\n",
     "    \"Generate a tree visualization for a directory\"\n",
     "    if path is None:\n",
@@ -142,7 +139,7 @@
     "    lines = [f\"{path.name}/\"]\n",
     "    \n",
     "    # Generate tree lines\n",
-    "    tree_lines = generate_tree_lines(path, \"\", True, show_notebooks_only, max_depth)\n",
+    "    tree_lines = generate_tree_lines(path, \"\", True, show_notebooks_only, max_depth, 0, exclude_index)\n",
     "    lines.extend(tree_lines)\n",
     "    \n",
     "    return '\\n'.join(lines)"
@@ -175,8 +172,7 @@
       "├── 03_api_docs.ipynb\n",
       "├── 04_dependencies.ipynb\n",
       "├── 05_generators.ipynb\n",
-      "├── 06_cli.ipynb\n",
-      "└── index.ipynb\n"
+      "└── 06_cli.ipynb\n"
      ]
     }
    ],
@@ -307,7 +303,8 @@
     "#| export\n",
     "def generate_tree_with_descriptions(path: Path = None,              # Directory to visualize\n",
     "                                   show_counts: bool = True,        # Show notebook counts for directories\n",
-    "                                   max_depth: Optional[int] = None  # Maximum depth to traverse\n",
+    "                                   max_depth: Optional[int] = None, # Maximum depth to traverse\n",
+    "                                   exclude_index: bool = True       # Exclude index.ipynb from tree\n",
     "                                   ) -> str:                        # Tree with descriptions\n",
     "    \"Generate tree visualization with descriptions from notebooks\"\n",
     "    if path is None:\n",
@@ -324,6 +321,10 @@
     "        # Flat structure - show notebooks with descriptions\n",
     "        lines.append(f\"{path.name}/\")\n",
     "        notebooks = get_notebook_files(path, recursive=False)\n",
+    "        \n",
+    "        # Filter out index.ipynb if exclude_index is True\n",
+    "        if exclude_index:\n",
+    "            notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
     "        \n",
     "        for i, nb_path in enumerate(notebooks):\n",
     "            is_last = (i == len(notebooks) - 1)\n",
@@ -342,7 +343,7 @@
     "    else:\n",
     "        # Nested structure - show directories with counts and descriptions\n",
     "        lines.append(f\"{path.name}/\")\n",
-    "        lines.extend(_generate_nested_tree_lines(path, \"\", show_counts, max_depth))\n",
+    "        lines.extend(_generate_nested_tree_lines(path, \"\", show_counts, max_depth, 0, exclude_index))\n",
     "    \n",
     "    return '\\n'.join(lines)"
    ]
@@ -359,54 +360,75 @@
     "                               prefix: str = \"\",                    # Line prefix\n",
     "                               show_counts: bool = True,            # Show notebook counts\n",
     "                               max_depth: Optional[int] = None,     # Maximum depth\n",
-    "                               current_depth: int = 0               # Current depth\n",
+    "                               current_depth: int = 0,              # Current depth\n",
+    "                               exclude_index: bool = True           # Exclude index.ipynb from tree\n",
     "                               ) -> List[str]:                      # Tree lines\n",
     "    \"Generate tree lines for nested directory structure\"\n",
     "    lines = []\n",
     "    \n",
+    "    # Check depth limit\n",
     "    if max_depth is not None and current_depth >= max_depth:\n",
     "        return lines\n",
     "    \n",
-    "    # Get subdirectories\n",
+    "    # Get subdirectories and notebooks\n",
     "    subdirs = get_subdirectories(path, recursive=False)\n",
-    "    subdirs.sort(key=lambda x: x.name.lower())\n",
+    "    notebooks = get_notebook_files(path, recursive=False)\n",
     "    \n",
-    "    for i, subdir in enumerate(subdirs):\n",
-    "        is_last = (i == len(subdirs) - 1)\n",
+    "    # Filter out index.ipynb if exclude_index is True\n",
+    "    if exclude_index:\n",
+    "        notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "    \n",
+    "    # Combine and sort all items\n",
+    "    all_items = []\n",
+    "    \n",
+    "    # Add subdirectories\n",
+    "    for subdir in subdirs:\n",
+    "        all_nb_files = get_notebook_files(subdir, recursive=True)\n",
+    "        # Filter out index.ipynb from counts if exclude_index is True\n",
+    "        if exclude_index:\n",
+    "            all_nb_files = [nb for nb in all_nb_files if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "        \n",
+    "        notebook_count = len(all_nb_files)\n",
+    "        \n",
+    "        if show_counts and notebook_count > 0:\n",
+    "            all_items.append((subdir, 'dir', f\"({notebook_count})\"))\n",
+    "        else:\n",
+    "            all_items.append((subdir, 'dir', \"\"))\n",
+    "    \n",
+    "    # Add notebooks in current directory\n",
+    "    for nb_path in notebooks:\n",
+    "        nb_info = extract_notebook_info(nb_path)\n",
+    "        if nb_info.description:\n",
+    "            all_items.append((nb_path, 'file', f\"# {nb_info.description}\"))\n",
+    "        else:\n",
+    "            all_items.append((nb_path, 'file', \"\"))\n",
+    "    \n",
+    "    # Generate lines for each item\n",
+    "    for i, (item, item_type, annotation) in enumerate(all_items):\n",
+    "        is_last = (i == len(all_items) - 1)\n",
     "        connector = \"└── \" if is_last else \"├── \"\n",
-    "        extension = \"    \" if is_last else \"│   \"\n",
     "        \n",
-    "        # Count notebooks in this directory (recursive)\n",
-    "        notebook_count = len(get_notebook_files(subdir, recursive=True))\n",
-    "        \n",
-    "        # Look for folder description from folder_name.ipynb\n",
-    "        folder_nb_path = subdir / f\"{subdir.name}.ipynb\"\n",
-    "        description = None\n",
-    "        if folder_nb_path.exists():\n",
-    "            nb_info = extract_notebook_info(folder_nb_path)\n",
-    "            description = nb_info.description\n",
-    "        \n",
-    "        # Format the line\n",
-    "        line_parts = [f\"{prefix}{connector}{subdir.name}/\"]\n",
-    "        \n",
-    "        if show_counts:\n",
-    "            count_str = f\"{notebook_count} notebook{'s' if notebook_count != 1 else ''}\"\n",
-    "            line_parts[0] = line_parts[0].ljust(28) + f\" # {count_str}\"\n",
+    "        if item_type == 'dir':\n",
+    "            # Directory with count\n",
+    "            dir_line = f\"{prefix}{connector}{item.name}/\"\n",
+    "            if annotation:\n",
+    "                dir_line += f\" {annotation}\"\n",
+    "            lines.append(dir_line)\n",
     "            \n",
-    "            if description:\n",
-    "                line_parts[0] += f\" - {description}\"\n",
-    "        elif description:\n",
-    "            line_parts[0] = line_parts[0].ljust(28) + f\" # {description}\"\n",
-    "        \n",
-    "        lines.append(line_parts[0])\n",
-    "        \n",
-    "        # Recursively process subdirectories\n",
-    "        if max_depth is None or current_depth + 1 < max_depth:\n",
+    "            # Recurse into subdirectory\n",
+    "            next_prefix = prefix + (\"    \" if is_last else \"│   \")\n",
     "            child_lines = _generate_nested_tree_lines(\n",
-    "                subdir, prefix + extension, show_counts, \n",
-    "                max_depth, current_depth + 1\n",
+    "                item, next_prefix, show_counts, max_depth, \n",
+    "                current_depth + 1, exclude_index\n",
     "            )\n",
     "            lines.extend(child_lines)\n",
+    "        else:\n",
+    "            # Notebook file\n",
+    "            nb_line = f\"{prefix}{connector}{item.name}\"\n",
+    "            if annotation:\n",
+    "                # Pad the filename to align descriptions\n",
+    "                nb_line = nb_line.ljust(len(prefix) + 28) + f\" {annotation}\"\n",
+    "            lines.append(nb_line)\n",
     "    \n",
     "    return lines"
    ]
@@ -438,8 +460,7 @@
       "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
       "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
       "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
-      "├── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
-      "└── index.ipynb              # Generate comprehensive overviews, API references, and project structure visualizations for nbdev projects to enhance developer and AI assistant understanding.\n"
+      "└── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n"
      ]
     }
    ],
