Update project description.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# cjm-nbdev-overview\n",
     "\n",
-    "> Generate comprehensive overviews, API references, and project structure visualizations for nbdev projects to enhance developer and AI assistant understanding."
+    "> Automated documentation and visualization tools for nbdev projects."
    ]
   },
   {
