--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,113 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Developer Guide"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you are new to using `nbdev` here are some useful pointers to get you started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install cjm_nbdev_overview in Development mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "# make sure cjm_nbdev_overview package is installed in development mode\n",
-    "$ pip install -e .\n",
-    "\n",
-    "# make changes under nbs/ directory\n",
-    "# ...\n",
-    "\n",
-    "# compile to have changes apply to cjm_nbdev_overview\n",
-    "$ nbdev_prepare\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install latest from the GitHub [repository][repo]:\n",
-    "\n",
-    "```sh\n",
-    "$ pip install git+https://github.com/cj-mills/cjm-nbdev-overview.git\n",
-    "```\n",
-    "\n",
-    "or from [conda][conda]\n",
-    "\n",
-    "```sh\n",
-    "$ conda install -c cj-mills cjm_nbdev_overview\n",
-    "```\n",
-    "\n",
-    "or from [pypi][pypi]\n",
-    "\n",
-    "\n",
-    "```sh\n",
-    "$ pip install cjm_nbdev_overview\n",
-    "```\n",
-    "\n",
-    "\n",
-    "[repo]: https://github.com/cj-mills/cjm-nbdev-overview\n",
-    "[docs]: https://cj-mills.github.io/cjm-nbdev-overview/\n",
-    "[pypi]: https://pypi.org/project/cjm-nbdev-overview/\n",
-    "[conda]: https://anaconda.org/cj-mills/cjm-nbdev-overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
-    "\n",
-    "[repo]: https://github.com/cj-mills/cjm-nbdev-overview\n",
-    "[docs]: https://cj-mills.github.io/cjm-nbdev-overview/\n",
-    "[pypi]: https://pypi.org/project/cjm-nbdev-overview/\n",
-    "[conda]: https://anaconda.org/cj-mills/cjm-nbdev-overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## How to use\n",
     "\n",
     "### Automatic Module Documentation\n",
@@ -137,41 +30,8 @@
     "   update_index_module_docs()\n",
     "   ```\n",
     "\n",
-    "This will add a \"Module Overview\" section to your index.ipynb containing detailed documentation for all modules in your project.\n",
-    "\n",
-    "### Generate Project Overviews\n",
-    "\n",
-    "Use the CLI to generate various project visualizations and documentation:"
+    "This will add a \"Module Overview\" section to your index.ipynb containing detailed documentation for all modules in your project."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```bash\n",
-    "# Generate a tree visualization\n",
-    "nbdev-overview tree\n",
-    "\n",
-    "# Generate API documentation\n",
-    "nbdev-overview api\n",
-    "\n",
-    "# Analyze dependencies\n",
-    "nbdev-overview deps\n",
-    "\n",
-    "# Generate complete project overview\n",
-    "nbdev-overview overview\n",
-    "\n",
-    "# Update index.ipynb with module docs\n",
-    "nbdev-overview update-index\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
