Add proper import statements to auto-generated Module Overviews.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -226,6 +226,79 @@
     "    if module.description:\n",
     "        lines.append(f\"> {module.description}\")\n",
     "    \n",
+    "    # Add import statements section\n",
+    "    lines.append(\"\\n#### Import\\n\")\n",
+    "    \n",
+    "    # Generate import statement based on the corresponding Python file\n",
+    "    try:\n",
+    "        from nbdev.config import get_config\n",
+    "        cfg = get_config()\n",
+    "        \n",
+    "        # Construct the Python module path using the module name\n",
+    "        python_module_path = cfg.lib_path / f\"{module.name}.py\"\n",
+    "        \n",
+    "        if python_module_path.exists():\n",
+    "            # Read the Python file to extract __all__\n",
+    "            with open(python_module_path, 'r', encoding='utf-8') as f:\n",
+    "                content = f.read()\n",
+    "            \n",
+    "            # Find the __all__ definition\n",
+    "            import ast\n",
+    "            try:\n",
+    "                tree = ast.parse(content)\n",
+    "                all_items = []\n",
+    "                \n",
+    "                for node in ast.walk(tree):\n",
+    "                    if isinstance(node, ast.Assign):\n",
+    "                        for target in node.targets:\n",
+    "                            if isinstance(target, ast.Name) and target.id == '__all__':\n",
+    "                                if isinstance(node.value, ast.List):\n",
+    "                                    all_items = [\n",
+    "                                        elt.s if isinstance(elt, ast.Str) else elt.value\n",
+    "                                        for elt in node.value.elts\n",
+    "                                        if isinstance(elt, (ast.Str, ast.Constant))\n",
+    "                                    ]\n",
+    "                                break\n",
+    "                \n",
+    "                if all_items:\n",
+    "                    # Create import statement\n",
+    "                    package_name = cfg.lib_name\n",
+    "                    full_module_path = f\"{package_name}.{module.name}\"\n",
+    "                    \n",
+    "                    lines.append(\"```python\")\n",
+    "                    lines.append(f\"from {full_module_path} import (\")\n",
+    "                    \n",
+    "                    # Add each item on a separate line with proper formatting\n",
+    "                    for i, item in enumerate(all_items):\n",
+    "                        if i == len(all_items) - 1:\n",
+    "                            lines.append(f\"    {item}\")\n",
+    "                        else:\n",
+    "                            lines.append(f\"    {item},\")\n",
+    "                    \n",
+    "                    lines.append(\")\")\n",
+    "                    lines.append(\"```\")\n",
+    "                else:\n",
+    "                    # Fallback if __all__ not found\n",
+    "                    lines.append(\"```python\")\n",
+    "                    lines.append(f\"from {cfg.lib_name}.{module.name} import *\")\n",
+    "                    lines.append(\"```\")\n",
+    "            \n",
+    "            except Exception:\n",
+    "                # Fallback if parsing fails\n",
+    "                lines.append(\"```python\")\n",
+    "                lines.append(f\"from {cfg.lib_name}.{module.name} import *\")\n",
+    "                lines.append(\"```\")\n",
+    "        else:\n",
+    "            # Fallback if Python file doesn't exist\n",
+    "            lines.append(\"```python\")\n",
+    "            lines.append(f\"# No corresponding Python module found for {module.name}\")\n",
+    "            lines.append(\"```\")\n",
+    "    except Exception:\n",
+    "        # Final fallback\n",
+    "        lines.append(\"```python\")\n",
+    "        lines.append(f\"# Import statements not available\")\n",
+    "        lines.append(\"```\")\n",
+    "    \n",
     "    # Filter items based on show_all and is_exported\n",
     "    if show_all:\n",
     "        functions = module.functions\n",
@@ -322,30 +395,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lmr82ynru4",
+   "id": "0564e619-847c-4574-8c1a-74996f673a8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def update_index_module_docs(index_path: Path = None,   # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
-    "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
-    "                           ) -> None:                    # Updates index.ipynb in place\n",
-    "    \"Update the module documentation section in index.ipynb\"\n",
-    "    if index_path is None:\n",
-    "        cfg = get_config()\n",
-    "        index_path = cfg.nbs_path / \"index.ipynb\"\n",
-    "    \n",
-    "    # Read the existing notebook\n",
-    "    nb = read_nb(index_path)\n",
-    "    \n",
-    "    # Find all module overview sections and remove them\n",
+    "def _filter_cells_removing_sections(cells: List,               # List of notebook cells\n",
+    "                                   start_marker: str            # Section marker to remove\n",
+    "                                   ) -> List:                   # Filtered cells\n",
+    "    \"Remove all cells from a section marked by start_marker until the next ## section\"\n",
     "    cells_to_keep = []\n",
     "    skip_until_next_section = False\n",
     "    \n",
-    "    for i, cell in enumerate(nb.cells):\n",
+    "    for cell in cells:\n",
     "        if cell.cell_type == 'markdown':\n",
     "            source = cell.source.strip()\n",
-    "            # Check if this is the start of a module overview section\n",
+    "            # Check if this is the start of a section to remove\n",
     "            if source.startswith(start_marker):\n",
     "                skip_until_next_section = True\n",
     "                continue\n",
@@ -353,33 +418,47 @@
     "            elif skip_until_next_section and re.match(r'^##\\s+(?!#)', source) and not source.startswith(start_marker):\n",
     "                skip_until_next_section = False\n",
     "        \n",
-    "        # Keep the cell if we're not in a module overview section\n",
+    "        # Keep the cell if we're not in a section to remove\n",
     "        if not skip_until_next_section:\n",
     "            cells_to_keep.append(cell)\n",
     "    \n",
-    "    # Get all notebooks and parse them\n",
-    "    notebooks = get_notebook_files(index_path.parent, recursive=True)\n",
-    "    module_cells = []\n",
-    "    \n",
-    "    # Create the module overview header cell\n",
-    "    header_cell = mk_cell(f\"{start_marker}\\n\\nDetailed documentation for each module in the project:\", \n",
-    "                         cell_type='markdown')\n",
-    "    module_cells.append(header_cell)\n",
-    "    \n",
-    "    # Sort notebooks by their numeric prefix if they have one\n",
-    "    def sort_key(\n",
-    "        nb_path  # TODO: Add type hint and description\n",
-    "    ): # TODO: Add type hint\n",
-    "        \"TODO: Add function description\"\n",
+    "    return cells_to_keep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20c50ed-2594-4020-8953-595c1f103641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _sort_notebooks_by_prefix(notebooks: List[Path]             # List of notebook paths\n",
+    "                             ) -> List[Path]:                   # Sorted notebook paths\n",
+    "    \"Sort notebooks by their numeric prefix, putting non-numbered notebooks at the end\"\n",
+    "    def sort_key(nb_path: Path) -> tuple:\n",
     "        match = re.match(r'^(\\d+)', nb_path.stem)\n",
     "        if match:\n",
     "            return (int(match.group(1)), nb_path.stem)\n",
     "        return (999, nb_path.stem)  # Put non-numbered notebooks at the end\n",
     "    \n",
-    "    sorted_notebooks = sorted(notebooks, key=sort_key)\n",
+    "    return sorted(notebooks, key=sort_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b980241-c442-4d85-92e9-6dd5a13162b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _get_notebooks_with_exports(notebooks: List[Path]          # List of notebook paths\n",
+    "                               ) -> List[Path]:                 # Notebooks with exported content\n",
+    "    \"Filter notebooks to only include those with exported content\"\n",
+    "    notebooks_with_exports = []\n",
     "    \n",
-    "    # Generate overview for each module\n",
-    "    for nb_path in sorted_notebooks:\n",
+    "    for nb_path in notebooks:\n",
     "        # Skip index notebooks\n",
     "        if nb_path.stem in ['index', '00_index']:\n",
     "            continue\n",
@@ -395,12 +474,75 @@
     "            ])\n",
     "            \n",
     "            if has_exports:\n",
-    "                overview_md = generate_module_overview(module_info)\n",
-    "                overview_cell = mk_cell(overview_md, cell_type='markdown')\n",
-    "                module_cells.append(overview_cell)\n",
+    "                notebooks_with_exports.append(nb_path)\n",
     "        except Exception as e:\n",
     "            print(f\"Error parsing {nb_path}: {e}\")\n",
     "            continue\n",
+    "    \n",
+    "    return notebooks_with_exports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830936b6-32d9-4aa9-9800-f16ceb3faf14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _generate_module_overview_cells(notebooks: List[Path]      # List of notebook paths\n",
+    "                                   ) -> List:                   # List of notebook cells\n",
+    "    \"Generate markdown cells containing module overview documentation\"\n",
+    "    module_cells = []\n",
+    "    \n",
+    "    # Create the module overview header cell\n",
+    "    header_cell = mk_cell(\"## Module Overview\\n\\nDetailed documentation for each module in the project:\", \n",
+    "                         cell_type='markdown')\n",
+    "    module_cells.append(header_cell)\n",
+    "    \n",
+    "    # Generate overview for each module\n",
+    "    for nb_path in notebooks:\n",
+    "        try:\n",
+    "            module_info = parse_notebook(nb_path)\n",
+    "            overview_md = generate_module_overview(module_info)\n",
+    "            overview_cell = mk_cell(overview_md, cell_type='markdown')\n",
+    "            module_cells.append(overview_cell)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error parsing {nb_path}: {e}\")\n",
+    "            continue\n",
+    "    \n",
+    "    return module_cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32cd2119-0e14-4000-9c55-ba1e948ceec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def update_index_module_docs(index_path: Path = None,          # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
+    "                           start_marker: str = \"## Module Overview\"  # Marker to identify module docs section\n",
+    "                           ) -> None:                          # Updates index.ipynb in place\n",
+    "    \"Update the module documentation section in index.ipynb\"\n",
+    "    if index_path is None:\n",
+    "        cfg = get_config()\n",
+    "        index_path = cfg.nbs_path / \"index.ipynb\"\n",
+    "    \n",
+    "    # Read the existing notebook\n",
+    "    nb = read_nb(index_path)\n",
+    "    \n",
+    "    # Filter out existing module overview sections\n",
+    "    cells_to_keep = _filter_cells_removing_sections(nb.cells, start_marker)\n",
+    "    \n",
+    "    # Get all notebooks and process them\n",
+    "    notebooks = get_notebook_files(index_path.parent, recursive=True)\n",
+    "    sorted_notebooks = _sort_notebooks_by_prefix(notebooks)\n",
+    "    notebooks_with_exports = _get_notebooks_with_exports(sorted_notebooks)\n",
+    "    \n",
+    "    # Generate new module overview cells\n",
+    "    module_cells = _generate_module_overview_cells(notebooks_with_exports)\n",
     "    \n",
     "    # Rebuild the notebook with the new module overview at the end\n",
     "    nb.cells = cells_to_keep + module_cells\n",
@@ -794,8 +936,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Updated module overview with import statements:\n",
+      "==================================================\n",
       "### Core Utilities (`00_core.ipynb`)\n",
       "> Core utilities and data models for nbdev project overview generation\n",
+      "\n",
+      "#### Import\n",
+      "\n",
+      "```python\n",
+      "from cjm-nbdev-overview.core import (\n",
+      "    NotebookInfo,\n",
+      "    DirectoryInfo,\n",
+      "    get_notebook_files,\n",
+      "    get_subdirectories,\n",
+      "    read_notebook,\n",
+      "    get_cell_source\n",
+      ")\n",
+      "```\n",
       "\n",
       "#### Functions\n",
       "\n",
@@ -849,8 +1006,14 @@
     }
    ],
    "source": [
+    "# Test the updated generate_module_overview function\n",
+    "import nbdev\n",
+    "nbdev.nbdev_export()\n",
+    "\n",
     "# Test generating documentation for a single module\n",
     "core_module = parse_notebook(Path(\"00_core.ipynb\"))\n",
+    "print(\"Updated module overview with import statements:\")\n",
+    "print(\"=\" * 50)\n",
     "print(generate_module_overview(core_module))"
    ]
   },
@@ -864,42 +1027,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## API Reference\n",
+      "Parsers module overview:\n",
+      "==============================\n",
+      "### Notebook and Module Parsing (`01_parsers.ipynb`)\n",
+      "> Parse notebook metadata, content, and extract function/class signatures with docments\n",
       "\n",
-      "### Core Utilities (`00_core.ipynb`)\n",
-      "> Core utilities and data models for nbdev project overview generation\n",
+      "#### Import\n",
+      "\n",
+      "```python\n",
+      "from cjm-nbdev-overview.parsers import (\n",
+      "    FunctionInfo,\n",
+      "    ClassInfo,\n",
+      "    VariableInfo,\n",
+      "    ModuleInfo,\n",
+      "    extract_docments_signature,\n",
+      "    parse_function,\n",
+      "    parse_class,\n",
+      "    parse_variable,\n",
+      "    parse_code_cell,\n",
+      "    parse_notebook,\n",
+      "    parse_python_file\n",
+      ")\n",
+      "```\n",
       "\n",
       "#### Functions\n",
       "\n",
       "```python\n",
-      "def get_notebook_files(path: Path = None,           # Directory to search (defaults to nbs_path)\n",
-      "                      recursive: bool = True        # Search subdirectories\n",
-      "                      ) -> List[Path]:              # List of notebook paths\n",
-      "    \"Get all notebook files in a directory\"\n",
+      "def extract_docments_signature(node: ast.FunctionDef,          # AST function node\n",
+      "                              source_lines: List[str]          # Source code lines\n",
+      "                              ) -> str:                        # Function signature\n",
+      "    \"Extract function signature with docments-style comments\"\n",
       "```\n",
       "\n",
       "```python\n",
-      "def get_subdirectories(path: Path = None,           # Directory to search (defaults to nbs_path)\n",
-      "                      recursive: bool = False       # Include all nested subdirectories\n",
-      "                      ) -> List[Path]:              # List of directory paths\n",
-      "    \"Get subdirectories in a directory\"\n",
-      "```\n",
-      "\n",
-      "```python\n",
-      "def read_notebook(path: Path                    # Path to notebook file\n",
-      "                 ) -> Dict[str, Any]:           # Notebook content as dict\n",
-      "    \"Read a notebook file and return its content\"\n",
-      "```\n",
-      "\n",
-      "```python\n",
-      "def get_...\n"
+      "def parse_funct...\n"
      ]
     }
    ],
    "source": [
-    "# Test full project API documentation (show first 1000 chars)\n",
-    "api_docs = generate_project_api_docs()\n",
-    "print(api_docs[:1000] + \"...\" if len(api_docs) > 1000 else api_docs)"
+    "# Test another module to see how the imports look\n",
+    "parsers_module = parse_notebook(Path(\"01_parsers.ipynb\"))\n",
+    "print(\"Parsers module overview:\")\n",
+    "print(\"=\" * 30)\n",
+    "print(generate_module_overview(parsers_module)[:800] + \"...\" if len(generate_module_overview(parsers_module)) > 800 else generate_module_overview(parsers_module))"
    ]
   },
   {
@@ -922,22 +1092,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "00796b76-98ad-43c0-8c12-3274fc47d70e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38d3bd78-aebd-4129-95e8-ca60132717d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5967560c-0d98-4ea1-88ae-b034e67602fa",
    "metadata": {},
    "outputs": [],
    "source": []
