--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -141,6 +141,19 @@
     "### Core Utilities (`00_core.ipynb`)\n",
     "> Core utilities and data models for nbdev project overview generation\n",
     "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.core import (\n",
+    "    NotebookInfo,\n",
+    "    DirectoryInfo,\n",
+    "    get_notebook_files,\n",
+    "    get_subdirectories,\n",
+    "    read_notebook,\n",
+    "    get_cell_source\n",
+    ")\n",
+    "```\n",
+    "\n",
     "#### Functions\n",
     "\n",
     "```python\n",
@@ -196,6 +209,24 @@
    "source": [
     "### Notebook and Module Parsing (`01_parsers.ipynb`)\n",
     "> Parse notebook metadata, content, and extract function/class signatures with docments\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.parsers import (\n",
+    "    FunctionInfo,\n",
+    "    ClassInfo,\n",
+    "    VariableInfo,\n",
+    "    ModuleInfo,\n",
+    "    extract_docments_signature,\n",
+    "    parse_function,\n",
+    "    parse_class,\n",
+    "    parse_variable,\n",
+    "    parse_code_cell,\n",
+    "    parse_notebook,\n",
+    "    parse_python_file\n",
+    ")\n",
+    "```\n",
     "\n",
     "#### Functions\n",
     "\n",
@@ -282,6 +313,19 @@
     "### Directory Tree Visualization (`02_tree.ipynb`)\n",
     "> Generate tree visualizations for nbdev project structure\n",
     "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.tree import (\n",
+    "    generate_tree_lines,\n",
+    "    generate_tree,\n",
+    "    extract_notebook_info,\n",
+    "    generate_tree_with_descriptions,\n",
+    "    generate_subdirectory_tree,\n",
+    "    get_tree_summary\n",
+    ")\n",
+    "```\n",
+    "\n",
     "#### Functions\n",
     "\n",
     "```python\n",
@@ -363,6 +407,23 @@
     "### API Documentation Generation (`03_api_docs.ipynb`)\n",
     "> Generate module overviews with formatted signatures for nbdev projects\n",
     "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.api_docs import (\n",
+    "    format_function_doc,\n",
+    "    format_class_doc,\n",
+    "    format_variable_doc,\n",
+    "    generate_module_overview,\n",
+    "    generate_project_api_docs,\n",
+    "    update_index_module_docs,\n",
+    "    add_project_structure_section,\n",
+    "    add_dependencies_section,\n",
+    "    add_cli_reference_section,\n",
+    "    update_index_comprehensive\n",
+    ")\n",
+    "```\n",
+    "\n",
     "#### Functions\n",
     "\n",
     "```python\n",
@@ -399,9 +460,34 @@
     "```\n",
     "\n",
     "```python\n",
-    "def update_index_module_docs(index_path: Path = None,   # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
-    "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
-    "                           ) -> None:                    # Updates index.ipynb in place\n",
+    "def _filter_cells_removing_sections(cells: List,               # List of notebook cells\n",
+    "                                   start_marker: str            # Section marker to remove\n",
+    "                                   ) -> List:                   # Filtered cells\n",
+    "    \"Remove all cells from a section marked by start_marker until the next ## section\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _sort_notebooks_by_prefix(notebooks: List[Path]             # List of notebook paths\n",
+    "                             ) -> List[Path]:                   # Sorted notebook paths\n",
+    "    \"Sort notebooks by their numeric prefix, putting non-numbered notebooks at the end\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _get_notebooks_with_exports(notebooks: List[Path]          # List of notebook paths\n",
+    "                               ) -> List[Path]:                 # Notebooks with exported content\n",
+    "    \"Filter notebooks to only include those with exported content\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_module_overview_cells(notebooks: List[Path]      # List of notebook paths\n",
+    "                                   ) -> List:                   # List of notebook cells\n",
+    "    \"Generate markdown cells containing module overview documentation\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def update_index_module_docs(index_path: Path = None,          # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
+    "                           start_marker: str = \"## Module Overview\"  # Marker to identify module docs section\n",
+    "                           ) -> None:                          # Updates index.ipynb in place\n",
     "    \"Update the module documentation section in index.ipynb\"\n",
     "```\n",
     "\n",
@@ -444,6 +530,20 @@
    "source": [
     "### Dependency Analysis and Visualization (`04_dependencies.ipynb`)\n",
     "> Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.dependencies import (\n",
+    "    ModuleDependency,\n",
+    "    DependencyGraph,\n",
+    "    extract_project_imports,\n",
+    "    analyze_module_dependencies,\n",
+    "    build_dependency_graph,\n",
+    "    generate_mermaid_diagram,\n",
+    "    generate_dependency_matrix\n",
+    ")\n",
+    "```\n",
     "\n",
     "#### Functions\n",
     "\n",
@@ -524,6 +624,17 @@
     "### Auto-generation Utilities (`05_generators.ipynb`)\n",
     "> Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
     "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.generators import (\n",
+    "    create_folder_notebook,\n",
+    "    generate_folder_notebook,\n",
+    "    generate_all_folder_notebooks,\n",
+    "    interactive_folder_notebook_generator\n",
+    ")\n",
+    "```\n",
+    "\n",
     "#### Functions\n",
     "\n",
     "```python\n",
@@ -565,6 +676,20 @@
    "source": [
     "### Command-Line Interface (`06_cli.ipynb`)\n",
     "> CLI commands for nbdev project overview generation and analysis\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm-nbdev-overview.cli import (\n",
+    "    tree_cmd,\n",
+    "    api_cmd,\n",
+    "    deps_cmd,\n",
+    "    overview_cmd,\n",
+    "    update_index_cmd,\n",
+    "    update_comprehensive_cmd,\n",
+    "    main\n",
+    ")\n",
+    "```\n",
     "\n",
     "#### Functions\n",
     "\n",
